--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -36,6 +36,16 @@ jobs:
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
+      - name: Cache .next build and pnpm modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.pnpm-store
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+
       - uses: actions/cache@v3
         name: Setup pnpm cache
         with:
@@ -53,7 +63,7 @@ jobs:
       - name: Prepare deployment package
         run: |
           mkdir deploy
-          cp -r .next/standalone/* pnpm-lock.yaml deploy/
+          cp -r .next/standalone/. pnpm-lock.yaml deploy/
           cd deploy
           ls -la
           zip -r my-nextjs-app.zip *
