--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -64,15 +64,16 @@ jobs:
         run: |
           mkdir deploy
           cp -r .next/standalone/. pnpm-lock.yaml deploy/
-          cd deploy
-          ls -la
-          zip -r release.zip *
+          echo "Listing all files from .next/standalone copied to create zip:"
+          ls -la .next/standalone/
+          ls -la deploy/
+          zip -r release.zip deploy/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./deploy/release.zip
+          path: ./release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -110,4 +111,4 @@ jobs:
           app-name: 'vercelaigafrontend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_04003FDCA94B4BE3928B4850814F6E61 }}
-          package: .
+          package: release.zip
