--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -97,6 +97,13 @@ jobs:
       - name: 'Echo download path'
         run: echo ${{steps.download.outputs.download-path}}
 
+      - name: unzip artifact for deployment
+        run: |
+          unzip release.zip
+          rm -rf release.zip
+          pwd
+          ls -la
+
       - name: 'Deploy to Azure WebApp'
         id: deploy-to-webapp 
         uses: azure/webapps-deploy@v2
@@ -104,4 +111,4 @@ jobs:
           app-name: 'vercelaigafrontend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_04003FDCA94B4BE3928B4850814F6E61 }}
-          package: release.zip
+          package: .
