--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -67,10 +67,11 @@ jobs:
           echo "Listing all files from .next/standalone copied to create zip:"
           ls -la .next/standalone/
           ls -la deploy/
-          zip -r release.zip deploy/.
+          cd deploy
+          zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: node-app
           path: ./release.zip
@@ -88,7 +89,7 @@ jobs:
       packages: write
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v2.1.1
         with:
           name: node-app
       - name: Display structure of downloaded files
