--- a/.github/workflows/azuredeployment_vercelaigafrontend.yml
+++ b/.github/workflows/azuredeployment_vercelaigafrontend.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Prepare deployment package
         run: |
           echo "Listing all files from .next/ to create zip:"
-          zip -r release.zip .next node_modules package.json pnpm-lock.yaml
+          zip -qr release.zip .next node_modules package.json pnpm-lock.yaml
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3.1.3
