--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
   "packageManager": "pnpm@8.6.3",
   "pnpm": {
     "overrides": {
-      "@auth/core": "0.12.0"
+      "@auth/core": "0.12.0",
+      "@swc/helpers@~0.4": "0.4.36"
     }
   }
 }
