--- a/package.json
+++ b/package.json
@@ -43,25 +43,25 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.4.1",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1"
+    "remark-math": "^5.1.1",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "^3.3.1",
+    "autoprefixer": "^10.4.13",
+    "tailwindcss-animate": "^1.0.5",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@typescript-eslint/parser": "^5.59.7",
-    "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.3.1",
-    "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.5.5"
   },
   "packageManager": "pnpm@8.6.3",
