--- a/.github/workflows/azure-docker.yml
+++ b/.github/workflows/azure-docker.yml
@@ -2,52 +2,41 @@ name: Build and Deploy to Azure Container Apps
 
 on:
   push:
-    branches:
-      - docker_deployment  # Set your branch name here
+    branches: 
+      - docker_deployment
+    
+  workflow_dispatch:
 
 env:
-  IMAGE_NAME: ai-ga-frontend-azure  # Set your image name here
-  REGISTRY_NAME: aigaregistry.azurecr.io  # Set your Azure Container Registry name here
-  APP_NAME: ai-ga-container  # Set your Azure Container App name here
-  RESOURCE_GROUP: ai-ga-frontend-rg  # Set your Azure Resource Group here
-  LOCATION: eastus2  # Set your Azure location here
+  IMAGE_NAME: ai-ga-frontend-azure
+  REGISTRY_NAME: aigaregistry.azurecr.io
+  APP_NAME: ai-ga-container
+  RESOURCE_GROUP: ai-ga-frontend-rg
+  LOCATION: eastus2
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions: 
+      id-token: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Login to Azure Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY_NAME }}
-          username: ${{ secrets.AZURE_USERNAME }}
-          password: ${{ secrets.AZURE_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:latest
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Login to Azure
+      - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy to Azure Container Apps
-        run: |
-          az containerapp create \
-            --name ${{ env.APP_NAME }} \
-            --resource-group ${{ env.RESOURCE_GROUP }} \
-            --location ${{ env.LOCATION }} \
-            --image ${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:latest \
-            --registry-username ${{ secrets.AZURE_USERNAME }} \
-            --registry-password ${{ secrets.AZURE_PASSWORD }}
+      - name: Build and push Docker image
+        uses: azure/container-apps-deploy-action@v1
+        with:
+          appSourcePath: ${{ github.workspace }}
+          registryUrl: ${{ env.REGISTRY_NAME }}
+          registryUsername: ${{ secrets.AZURE_USERNAME }}
+          registryPassword: ${{ secrets.AZURE_PASSWORD }}
+          containerAppName: ${{ env.APP_NAME }}
+          resourceGroup: ${{ env.RESOURCE_GROUP }}
+          imageToBuild: ${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          dockerfilePath: Dockerfile
