--- a/.github/workflows/azure-docker.yml
+++ b/.github/workflows/azure-docker.yml
@@ -23,9 +23,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-            client-id: ${{ secrets.AIGACONTAINER_AZURE_TENANT_ID }}
-            tenant-id: ${{ secrets.AIGACONTAINER_AZURE_TENANT_ID }}
-            subscription-id: ${{ secrets.AIGACONTAINER_AZURE_TENANT_ID }}
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Build and push Docker image
         uses: azure/container-apps-deploy-action@v1
