--- a/.github/workflows/azure-docker.yml
+++ b/.github/workflows/azure-docker.yml
@@ -24,6 +24,7 @@ jobs:
         uses: azure/login@v1
         with:
             creds: ${{ secrets.AZURE_CREDENTIALS }}
+            allow-no-subscriptions: true
 
       - name: Build and push Docker image
         uses: azure/container-apps-deploy-action@v1
