--- a/.github/workflows/azure-docker.yml
+++ b/.github/workflows/azure-docker.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Azure Login
-        uses: azure/actions/login@v1
+        uses: azure/login@v1
         with:
             creds: ${{ secrets.AZURE_CREDENTIALS }}
 
