--- a/.github/workflows/azure-docker.yml
+++ b/.github/workflows/azure-docker.yml
@@ -10,6 +10,7 @@ env:
   REGISTRY_NAME: aigaregistry.azurecr.io
   APP_NAME: ai-ga-container
   RESOURCE_GROUP: ai-ga-frontend-rg
+  WEBSITES_PORT: '3000'
   LOCATION: eastus2
 
 jobs:
