--- a/.env.local
+++ b/.env.local
@@ -4,5 +4,5 @@ AZURE_AD_TENANT_ID=44467e6f-462c-4ea2-823f-7800de5434e3
 AZURE_AD_CLIENT_SECRET=Rcj8Q~yamTRguTWe6hQok8Vy7-WDLPcDUZ9WJbpP
 AZURE_AD_CLIENT_ID=9e7ff270-73ec-4b31-a8d5-6a3195fb9013
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://host.docker.internal:3000
 NEXTAUTH_SECRET=5420206d66d14fcc157f604e35e03c64
