--- a/.github/workflows/azure-docker.yml
+++ b/.github/workflows/azure-docker.yml
@@ -40,3 +40,12 @@ jobs:
           resourceGroup: ${{ env.RESOURCE_GROUP }}
           imageToBuild: ${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           dockerfilePath: Dockerfile
+
+      - name: Set up Docker Compose
+        uses: docker/compose-cli@v1
+        with:
+          version: '1.29.2'
+
+      - name: Build and run Docker Compose
+        run: |
+          docker-compose up -d
