--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     ports:
       - 3000:3000
     environment:
-      - OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
-      - AUTH_SECRET=${{ secrets.AUTH_SECRET }}
-      - AZURE_AD_TENANT_ID=${{ secrets.AZURE_AD_TENANT_ID }}
-      - AZURE_AD_CLIENT_SECRET=${{ secrets.AZURE_AD_CLIENT_SECRET }}
-      - AZURE_AD_CLIENT_ID=${{ secrets.AZURE_AD_CLIENT_ID }}
-      - NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }}
-      - NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - AUTH_SECRET=${AUTH_SECRET}
+      - AZURE_AD_TENANT_ID=${AZURE_AD_TENANT_ID}
+      - AZURE_AD_CLIENT_SECRET=${AZURE_AD_CLIENT_SECRET}
+      - AZURE_AD_CLIENT_ID=${AZURE_AD_CLIENT_ID}
+      - NEXTAUTH_URL=${NEXTAUTH_URL}
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
