--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^1.0.0",
     "@vercel/kv": "^0.2.1",
     "@vercel/og": "^0.5.7",
     "ai": "^2.1.6",
+    "autoprefixer": "^10.4.13",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "focus-trap-react": "^10.1.1",
     "nanoid": "^4.0.2",
-    "next": "13.4.19",
-    "next-auth": "0.0.0-manual.ffd05533",
+    "next": "13.5.4",
+    "next-auth": "0.0.0-manual.dacbe24d",
     "next-themes": "^0.2.1",
     "openai-edge": "^0.5.1",
     "react": "^18.2.0",
@@ -45,10 +47,8 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.3.1",
-    "autoprefixer": "^10.4.13",
-    "tailwindcss-animate": "^1.0.5",
-    "@tailwindcss/typography": "^0.5.9"
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
